--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "start": "webpack-dev-server --mode development"
   }
 }
