--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "webpack-config": "^7.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
